infra/k8s/postgres-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
  labels:
    name: postgres-auth-depl
spec:
  selector:
    matchLabels:
      app: postgres-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres-auth
          image: postgres:14-alpine
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-srv
spec:
  selector:
    app: postgres-auth
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
